# elementary-sensors

./: .gitignore  README.md  meson.build  monitor install.txt
data/: com.github.marcelkohl.sensors.appdata.xml.in  com.github.marcelkohl.sensors.desktop.in  com.github.marcelkohl.sensors.gschema.xml  css.gresource.xml  local.sample.sensors.appdata.xml.in  local.sample.sensors.desktop.in  local.sample.sensors.gschema.xml  meson.build
data/icons/: icons.indicator.gresource.xml
po/: LINGUAS  POTFILES  es.po  local.sample.sensors.pot  pt.po
src/: Application  Application.vala  MainWindow.vala  Sensors.vala
src/DataModel/: SensorRecord.vala
src/Indicator/: Indicator.vala
src/Indicator/Service/: DBusClient.vala
src/Indicator/Services/: DBusClient.vala
src/Indicator/Widget/: DisplayWidget.vala  MenuWidget.vala  TemperatureWidget.vala
src/Indicator/Widgets/: DisplayWidget.vala  MenuWidget.vala  SensorsWidget.vala  TemperatureWidget.vala
src/Model/: SensorRecord.vala
src/Models/: SensorRecord.vala
src/Service/: DBusServer.vala  Sensor.vala
src/Services/: DBusServer.vala  Sensor.vala
src/View/: MainList.vala
src/Views/: MainList.vala
src/Window/: DeviceItem.vala  DeviceList.vala  Footer.vala  Headerbar.vala  Main.vala
src/Window/Main/: Window.vala
